# Annealing

./: CMakeLists.txt  README.md  add_vertex_mutation.cpp  add_vertex_mutation.h  annealing.cpp  annealing.h  build.sh  clean.sh  csv_utils.cpp  difference_penalty.cpp  difference_penalty.h  distance_matrix.cpp  distance_matrix.h  distance_penalty.cpp  distance_penalty.h  generate_answer.ipynb  main.cpp  make_plots.ipynb  maximum_penalty.cpp  maximum_penalty.h  mutation.cpp  mutation.h  penalty.cpp  penalty.h  problem.cpp  problem.h  swap_between_lines_mutation.cpp  swap_between_lines_mutation.h  swap_head_tail_mutation.cpp  swap_head_tail_mutation.h  swap_vertex_mutation.cpp  swap_vertex_mutation.h  transfer_mutation.cpp  transfer_mutation.h  utils.cpp  utils.h
include/: add_vertex_mutation.h  annealing.h  csv_utils.h  remove_vertex_mutation.h  swap_between_lines_mutation.h  swap_head_tail_mutation.h  swap_vertex_mutation.h  transfer_mutation.h  vertex_difference_penalty.h
results/: answer.csv  answer.txt  total_penalties.txt
src/: add_vertex_mutation.cpp  annealing.cpp  difference_penalty.cpp  distance_matrix.cpp  main.cpp  problem.cpp  remove_vertex_mutation.cpp  swap_between_lines_mutation.cpp  swap_head_tail_mutation.cpp  swap_vertex_mutation.cpp  transfer_mutation.cpp  utils.cpp  vertex_difference_penalty.cpp
test_results/: coords.txt  final_answer.txt  initial_answer.txt  total_penalties.txt
